<resources>

    <!-- Button Strings -->
    <string name="app_name">"El Bluff Hospital "</string>
    <string name="searchShipments">Envios</string>
    <string name="specificDrug">Droga específica</string>
    <string name="entInv">Inventario en total</string>

    <!-- Inventory Table Strings -->
    <string name="attrMID">Identificacion</string>
    <string name="attrMName">Nombre</string>
    <string name="attrQuantity">Cantidad</string>
    <string name="title_activity_patient_data">PatientData</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_app_bar">AppBar</string>
    <string name="title_activity_login">Inicio</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user"> No válido </string>
    <string name="error_invalid_password"> No válido </string>
    <string name="error_incorrect_password"> la contraseña es incorrecta </string>
    <string name="error_field_required"> Este campo es requerido </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_new_visit_history">NewVisitHistory</string>
    <string name="title_activity_new_patient_prescription">NewPatientPrescription</string>
    <string name="title_activity_add_new_visit">AddNewVisit</string>


    <string name="hintDrugName">Nombre de Medicina</string>
    <string name="hintDrugId">ID de Medicina</string>
    <string name="hintDrugQuantity">Cantidad</string>
    <string name="hintDrugUnits">Formato</string>
    <string name="hintDate">Fecha de Envío</string>
    <string name="hintDateExp">Fecha de Caducidad</string>
    <string name="textCreateShipment">Crear nuevo envío</string>
    <string name="guardar">textSave</string>
    <string name="textFind">Encontrar</string>
    <string name="titleFetchSpecificDrug">Elige de la lista</string>
    <string name="titleInventoryOptions">Opciones de Inventario</string>
    <string name="titlePharmacyMain">Menu Principal de la Farmacia</string>
    <string name="textAddShipment">Añadir Envio</string>
    <string name="textChooseButton">Toca un botón para seleccionar</string>
    <string name="textViewTotals">Ver Totales</string>
    <string name="cdInventoryButton">InventoryButton</string>
    <string name="cdShipmentButton">ShipmentButton</string>

    <!-- Brianna -->
    <string name="hintEdit">Clic para agregar</string>
    <string name="patName">Nombre</string>
    <string name="patID">ID</string>
    <string name="patAddress">Dirección</string>
    <string name="patPhone">Tele</string>
    <string name="patGender">Género</string>
    <string name="patMarriage">Casado</string>
    <string name="pattBirthday">Fecha de Nacimiento</string>
    <string name="patChildren">Niños</string>
    <string name="patHeight">Altura</string>
    <string name="patWeight">Pesadura</string>
    <string name="patAlergies">Alergias</string>
    <string name="patIllness">Condiciones Medicos</string>
    <string name="newvisit">Add New Visit</string>
    <string name="addnewpresc">Add New Prescription</string>
    <string name="FakePresc">Accept</string>
    <string name="NewPDF">Add PDF</string>


    <string-array name="PatientInfoDD">
        <item>Nombre</item>
        <item>ID</item>
        <item>Dirección</item>
        <item>Tele</item>
        <item>Genero</item>
        <item>Casado</item>
        <item>La fecha de nacimiento</item>
        <item>Ninos</item>
        <item>Altura</item>
        <item>Pesadura</item>
        <item>Alergias</item>
        <item>Condiciones Medicos</item>
    </string-array>


</resources>
