<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:layout_marginTop = "30dp"
    android:background="@drawable/greygradient">
    <!--Comment-->
    <EditText
        android:id="@+id/addName"
        android:layout_height="wrap_content"
        android:layout_width="275dp"
        android:inputType="text"
        android:hint="@string/hintDrugName"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/text_farmaciaMain"
        android:layout_alignLeft="@+id/addId"
        android:layout_alignStart="@+id/addId" />

    <EditText
        android:id="@+id/addId"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintDrugId"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/addName"
        android:layout_centerHorizontal="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker3"
        android:headerBackground="#00004d"
        android:calendarViewShown="false"
        android:layout_below="@+id/addQuantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/addQuantity"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hintDrugQuantity"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/addId"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/textCreateShipment"
        android:id="@+id/text_farmaciaMain"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:text="Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button5"
        android:textSize="24sp"
        android:onClick="createShipment" />

</RelativeLayout>