<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_see_inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ethanfortin_nicaragua.elbluffhospital.Inventory.InventoryOptions"
    android:animationCache="false"
    android:background="@drawable/greygradient">

    <TextView
        android:text="@string/titleInventoryOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="48sp"
        android:textColor="#121254"
        android:layout_marginTop="43dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="textStart"
        android:layout_gravity = "start"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/entInv"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:id="@+id/b_entireInventory"
        android:textSize="30sp"
        android:onClick="entireInventory"
        android:background="#00004d"
        android:textColor="#cccccc"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/specificDrug"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:id="@+id/b_searchDrug"
        android:background="#00004d"
        android:textColor="#cccccc"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_marginTop="102dp"
        android:layout_below="@+id/b_searchShipments"
        android:layout_alignLeft="@+id/b_searchShipments"
        android:layout_alignStart="@+id/b_searchShipments"
        android:onClick="specificDrug" />

    <Button
        android:text="@string/searchShipments"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:id="@+id/b_searchShipments"
        android:background="#00004d"
        android:textColor="#cccccc"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_marginTop="99dp"
        android:layout_below="@+id/b_entireInventory"
        android:layout_alignLeft="@+id/b_entireInventory"
        android:layout_alignStart="@+id/b_entireInventory" />

</RelativeLayout>
